themes/exeal/assets/scss/foundation/_tags.scss
@import 'foundation/variables';

ul.tags {
  margin: 1em 0em;
}

ul.tags li {
  display: inline-block;
  border-style: solid;
  border-radius: 5px;
  border-width: 2px;
  padding: 0em 0.5em;
  margin: 0.5em 1em;
}

ul.tags.tags-light li {
  color: white;
  border-color: white;
}

ul.tags.tags-dark li {
  color: $dark-background-color;
  border-color: $dark-background-color;
}

ul.tags.tags-light a {
  color: white;
}

ul.tags.tags-light li:hover a {
  color: $dark-background-color;
  transition: 0.2s;
}

ul.tags.tags-light li:hover {
  background-color: white;
  transition: 0.2s;
}

ul.tags.tags-dark a {
  color: $dark-background-color;
}

ul.tags.tags-dark li:hover a {
  color: white;
  transition: 0.2s;
}

ul.tags.tags-dark li:hover {
  background-color: $dark-background-color;
  transition: 0.2s;
}

ul.tags a:hover {
  text-decoration: none;
}

ul.tags.tags-small {
  font-size: 0.75rem;
  margin: 0px;
}

ul.tags.tags-small li {
  display: inline;
  padding: 0.25em 0.5em;
  margin: 0.25em 0em;
}

